# OnionPIRv2

./: .gitignore  CMakeLists.txt  README.md  run.py
claude_resp/: bv_keyswitching_implementation_plan.md  bv_vs_ghs_keyswitching_comparison.md  crt_first_dim_optimization.md  fspiral_keyswitching_analysis.md  galois_key_analysis.md  inspire_keyswitching_analysis.md  seal_removal_plan.md  seeded_gsw_key_old.md
src/: bv_keyswitch.cpp  client.cpp  gsw.cpp  gsw_eval.cpp  logging.cpp  main.cpp  matrix.cpp  pir.cpp  rlwe.cpp  rlwe_enc.cpp  server.cpp  tests.cpp  utils.cpp
src/includes/: bv_keyswitch.h  client.h  database_constants.h  gsw.h  gsw_eval.h  logging.h  matrix.h  pir.h  rlwe.h  rlwe_enc.h  server.h  tests.h  utils.h
src/tests/: run_test.cpp  test_batch_decomp.cpp  test_bfv.cpp  test_bv_keyswitch.cpp  test_db_shape.cpp  test_decrypt_mod_q.cpp  test_ext_prod.cpp  test_ext_prod_mux.cpp  test_fast_expand.cpp  test_fst_dim.cpp  test_hexl_ntt.cpp  test_mod_switch.cpp  test_noise_sampling.cpp  test_pir.cpp  test_raw_pt_ct.cpp  test_rlwe_enc.cpp  test_serial.cpp  test_sk_mod_switch.cpp
